# projet_api

./: .gitignore  LICENSE  README.md  pyproject.toml
src/projet_api/: api.py  utils.py
tests/: test_api.py
