[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projet_api"
version = "0.1.0"
description = "Simple Python API library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Denecheau Thomas" }
]
requires-python = ">=3.9"

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]